--- a/output.html
+++ b/output.html
@@ -208,20 +208,18 @@ penalty offsets their natural armor class bonus.</p>
 <p>Notably absent from the weapons list is the longbow which would require
 additional training to master.</p>
 <p><strong>Armor class:</strong>  The barbarian gains an armor class bonus based on
-their level. This bonus is reduced by any armor check penalty or any
-other agility modifier.</p>
+their level. This bonus does not stack with armor.</p>
 <p><strong>Attack</strong>: Berserker Die, same as Deed Die but no mighty deeds. Max
 roll on the berserker die and the barbarian goes berserk. The player may
 choose to roll any die lower on the dice chain (make the fight harder to
-make yourself angrier and more likely to go berserk). The player may
-burn a point of Intelligence to avoid entering Berserker Mode.</p>
-<p><strong>Berserker</strong>: When facing a threat and rolling the maximum value on the
-berserker die, the barbarian goes berserk until their are no reachable
-enemies or they burns 2 points of intelligence. A berserk barbarian adds their Fort save to their armor class. The barbarian gains an additional
-action die -1d on the dice chain from their highest action die.
-This action may be used during the current round.</p>
-<p>Going berserk imposes the following additional modifiers to saving
-throws; +2 Fort, +2 Reflex, -2 Will.</p>
+make yourself angrier and more likely to go berserk).</p>
+<p><strong>Berserker</strong>: When successfully hitting a real threat and rolling the maximum value on the berserker die, the barbarian may go <em>berserk</em>. The barbarian goes berserk until their are no reachable enemies or they burn 2 points of intelligence. If the player chooses, this may be avoided with a will save against the attack roll.</p>
+<ul>
+<li>A berserk barbarian adds their Fort save to their armor class.</li>
+<li>The barbarian gains an additional action die -1d on the dice chain from their highest action die and that hits and crits on a maximum result.
+This action may be used during the current round.</li>
+<li>Going berserk imposes the following additional modifiers to saving throws; +2 Fort, +2 Reflex, -2 Will.</li>
+</ul>
 <p>It is not possible to enter berserk mode at will. In other words, the
 roll that goes berserk must be against a real threat.</p>
 <p>After a going berserk the barbarian freaks out.</p>
@@ -417,7 +415,7 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 <p>The anointed warrior. Anti-paladins may use all of the powers of the cleric and <em>Mighty Deeds</em> upon reaching level 2. God&rsquo;s warrior is subject to harsher punishment then most.</p>
 <p><strong>Hit points, Lucky weapon, Mighty Deeds, Crit range:</strong> As Paladin.</p>
 <p><strong>Fickle Master</strong>: Anti-Paladin&rsquo;s use d5s when rolling on the disapproval table.</p>
-<p><strong>Lay On Hands:</strong>: Replaced with <em>Death Touch</em> (<em>DCC Annual</em>, #1, Pg 18) or, as an action, the Anti-paladin may cause 1 die of damage to any <em>living being</em> touched. The die used is on the dice chain at the Anti-paladin&rsquo;s level. Undead are healed as normal <em>lay on hands</em>.</p>
+<p><strong>Lay On Hands:</strong>: Replaced with <em>Death Touch</em> (<em>DCC Annual</em>, #1, Pg 18) or, as an action, the Anti-paladin may cause 1 die of damage to any <em>living being</em> touched. The die used is on the dice chain at the Anti-paladin&rsquo;s level. Undead are healed as normal <em>lay on hands</em>. Turned undead are healed and do your bidding for the day.</p>
 <p><strong>Turn Unholy:</strong> effects the same creatures as a lawful Cleric, but makes them your slaves. Use the <em>Turn Unholy</em> table but, the turned fight for you for the amount of time listed and half the hit points. </p>
 <h3 id="paladin-anti-paladin-table">Paladin /Anti- Paladin Table</h3>
 <table>
@@ -601,6 +599,7 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 <p>Depending on who you ask, the Dark Elves are the corrupt, outcasts of the high elves or the true carriers of the Elven lineage. What they lack in martial prowess is made up for by their abilities as rogues and assassins. </p>
 <p>Dark Elves can heal 1 luck per day and use it to cast spells, but cannot spellburn except at great cost. Burning Stats other than luck causes permanent damage.</p>
 <p>Dark Elves share common elf traits such as infravision, a lucky spell, heigtened senses, and immunity to magical sleep and paralysis.</p>
+<p><strong>Hit points:</strong> A Dark Elf gains 1d7 hit points at each level.</p>
 <p><strong>Spells Known:</strong> as Elf -2 and no automatic Patron Bond/Invoke Patron.</p>
 <p><strong>Caster Level:</strong> Dark elves cast at 1 less than their caster level.</p>
 <p><strong>Luck Die:</strong> 1:1 at first level and then as Thief -d1 thereafter.</p>
