adding sheets to zine

--- a/croak_01.html
+++ b/croak_01.html
@@ -1081,6 +1081,12 @@ If the armor is killed, the head disconnects and flies away. </p>
 <p>inside back cover</p>
 </section>
 <section class="clean">
+<p><img alt="" src="charactersheets/RangerSheet.svg" /></p>
+</section>
+<section class="clean">
+<p class="background"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
+</section>
+<section class="clean">
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section></body>
 </html>
