--- a/output.html
+++ b/output.html
@@ -1063,5 +1063,11 @@ If the armor is killed, the head disconnects and flies away. </p>
 <p>inside back cover</p>
 </section>
 <section class="clean">
+<p><img alt="" src="charactersheets/RangerSheet.svg" /></p>
+</section>
+<section class="clean">
+<p class="background"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
+</section>
+<section class="clean">
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section>
