--- a/output.html
+++ b/output.html
@@ -1063,10 +1063,10 @@ If the armor is killed, the head disconnects and flies away. </p>
 <p>inside back cover</p>
 </section>
 <section class="clean">
-<p><img alt="" src="charactersheets/RangerSheet.svg" /></p>
+<p class="fullpage"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
 </section>
 <section class="clean">
-<p class="background"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
+<p class="fullpageright"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
 </section>
 <section class="clean">
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
