--- a/croak_01.html
+++ b/croak_01.html
@@ -17,6 +17,7 @@
     <body>
 
 <section class="clean">
+<h2 class="hidden" id="cover">Cover</h2>
 <!-- ![](images/cover.svg) -->
 <!-- {: .background} -->
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
@@ -25,6 +26,7 @@
 <h3 id="contents_1">Contents</h3>
 <div class="toc">
 <ul>
+<li><a href="#cover">Cover</a></li>
 <li><a href="#autozinefier">AutoZinefier</a></li>
 <li><a href="#ranger">Ranger</a></li>
 <li><a href="#barbarian">Barbarian</a></li>
@@ -213,6 +215,10 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <p>*Ranged attacks only.</p>
 <!-- ![](images/coversuper.svg) -->
 <!-- {: .background} -->
+<h3 class="breakbefore breakafter hidden" id="ranger-character-sheet">Ranger character sheet</h3>
+<p class="fullpage breakbefore"><a href="charactersheets/RangerSheet.pdf"><img alt="" src="charactersheets/RangerSheet.svg" /></a></p>
+<p class="breakbefore breakafter hidden">Ranger character sheet 2</p>
+<p class="fullpageright breakbefore"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
 </section>
 <section class="">
 <h2 id="barbarian"><strong>Barbarian</strong></h2>
@@ -380,6 +386,10 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tr>
 </tbody>
 </table>
+<h3 class="breakbefore breakafter hidden" id="barbarian-character-sheet">Barbarian character sheet</h3>
+<p class="fullpage breakbefore"><a href="charactersheets/BarbarianSheet.pdf"><img alt="" src="charactersheets/BarbarianSheet.svg" /></a></p>
+<p class="breakbefore breakafter hidden">Barbarian character sheet 2</p>
+<p class="fullpageright breakbefore"><img alt="" src="charactersheets/BarbarianSheet.svg" /></p>
 </section>
 <section class="">
 <h2 id="paladin">Paladin</h2>
@@ -427,6 +437,10 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tbody>
 </table>
 <p class="breakbefore">Paladin Image </p>
+<h3 class="breakbefore breakafter hidden" id="paladin-character-sheet">Paladin character sheet</h3>
+<p class="fullpage breakbefore"><a href="charactersheets/PaladinSheet.pdf"><img alt="" src="charactersheets/PaladinSheet.svg" /></a></p>
+<p class="breakbefore breakafter hidden">Paladin character sheet 2</p>
+<p class="fullpageright breakbefore"><img alt="" src="charactersheets/PaladinSheet.svg" /></p>
 </section>
 <section class="">
 <h2 id="anti-paladin">Anti-Paladin</h2>
@@ -611,6 +625,10 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tbody>
 </table>
 <p class="breakbefore">Anti-Paladin Image</p>
+<h3 class="breakbefore breakafter hidden" id="anti-paladin-character-sheet">Anti-Paladin character sheet</h3>
+<p class="fullpage breakbefore"><a href="charactersheets/AntiPaladinSheet.pdf"><img alt="" src="charactersheets/AntiPaladinSheet.svg" /></a></p>
+<p class="breakbefore breakafter hidden">AntiPaladin character sheet 2</p>
+<p class="fullpageright breakbefore"><img alt="" src="charactersheets/AntiPaladinSheet.svg" /></p>
 </section>
 <section class="">
 <h2 id="dark-elf"><strong>Dark Elf</strong></h2>
@@ -876,6 +894,10 @@ point of damage.</p>
 </tr>
 </tbody>
 </table>
+<h3 class="breakbefore breakafter hidden" id="dark-elf-character-sheet">Dark Elf character sheet</h3>
+<p class="fullpage breakbefore"><a href="charactersheets/DarkElfSheet.pdf"><img alt="" src="charactersheets/DarkElfSheet.svg" /></a></p>
+<p class="breakbefore breakafter hidden">Dark Elfi character sheet 2</p>
+<p class="fullpageright breakbefore"><img alt="" src="charactersheets/DarkElfSheet.svg" /></p>
 </section>
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
@@ -1079,12 +1101,6 @@ If the armor is killed, the head disconnects and flies away. </p>
 </section>
 <section class="clean">
 <p>inside back cover</p>
-</section>
-<section class="clean">
-<p class="fullpage"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
-</section>
-<section class="clean">
-<p class="fullpageright"><img alt="" src="charactersheets/RangerSheet.svg" /></p>
 </section>
 <section class="clean">
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
