--- a/output.html
+++ b/output.html
@@ -15,6 +15,7 @@
 <li><a href="#paladin">Paladin</a></li>
 <li><a href="#anti-paladin">Anti-Paladin</a></li>
 <li><a href="#dark-elf">Dark Elf</a></li>
+<li><a href="#list-of-dcc-core-monsters-by-hd">List of dcc core monsters by HD</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slurm-grubins">Slurm Grubins</a></li>
@@ -882,12 +883,17 @@ point of damage.</p>
 <p class="fullpageright breakbefore"><img alt="" src="charactersheets/DarkElfSheet.svg" /></p>
 </section>
 <section class="">
+<h2 id="list-of-dcc-core-monsters-by-hd">List of dcc core monsters by HD</h2>
+<p>Android
+Ant, giant</p>
+</section>
+<section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
 <p>No self respecting halfling is without their pipe and some good pipeweed.
 While smoking standard pipeweed has no mechanical effect, certain herbal additives maybe added to a hot pipe to enhance the halflings abilities.
 A halfling may forage for pipeweed by rolling on the following table.
 Typically just before their next adventure.</p>
-<p>Standard pipeweed can only be foraged but may be bought in shops in areas where halflings reside for 10sp each.
+<p>Standard pipeweed can be foraged but may be bought in shops in areas where halflings reside for 10sp each.
 It should also be noted that it would be terribly rude for a halfling to refuse another halfling a puff of pipeweed and nearly as rude for the favor to not be asked. </p>
 <p>A halfling must use a portion of standard pipeweed to keep their pipe lit all day.
 With their pipe lit the halfling may use an action to add a little herbal supplement to the pipe. Effects do not stack.</p>
