bards bane edits

--- a/croak_01.html
+++ b/croak_01.html
@@ -902,119 +902,169 @@ point of damage.</p>
 </section>
 <section class="">
 <h2 id="bards-bane">Bard&rsquo;s Bane</h2>
-<p>The sword can speak common, Elven, Dwarvish, and Halfling and is generally talkative. It’s personality and magical features are variable. Roll at the beginning of each session. </p>
+<p>This enchanted sword passes exists in a dimension of infinate personalities. Roll on the following table at the beginning of each session.</p>
 <table>
 <thead>
 <tr>
 <th>d24</th>
-<th>Attitude</th>
+<th>Personality</th>
 <th>Power</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>1</td>
-<td>Grumpy</td>
-<td>Hates creature type of Judge&rsquo;s choice, +1d damage and +1d crit die against creature</td>
+<td></td>
+<td>Morose</td>
+<td>-1</td>
 </tr>
 <tr>
-<td>2</td>
-<td>Angry</td>
-<td>+2 Attack and damage</td>
+<td></td>
+<td>Lazy</td>
+<td>-1 damage</td>
 </tr>
 <tr>
-<td>3</td>
-<td>Eager and Curious</td>
-<td>+1, Detect secret doors within 10’, Blade glows as a torch</td>
+<td></td>
+<td></td>
+<td>+1, -1 all saving throws</td>
 </tr>
 <tr>
-<td>4</td>
-<td>Sarcastic</td>
-<td>Intelligent enemies may become enraged (20% chance, -2 att, +1 damage)</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Narcissistic</td>
-<td>Wielder must praise the sword with a novel compliment before entering combat or -1 att.</td>
-</tr>
-<tr>
-<td>6</td>
+<td></td>
 <td>Garrulous</td>
 <td>Enemies are never surprised</td>
 </tr>
 <tr>
-<td>7</td>
-<td>Stingy</td>
-<td>+1 attack, -1 damage</td>
-</tr>
-<tr>
-<td>8</td>
-<td>Morose</td>
-<td>No bonus</td>
-</tr>
-<tr>
-<td>9</td>
-<td>Super Mom</td>
-<td>+3 Attack if the wielder has helped someone, does not let the wielder lie, cheat, or steal.</td>
-</tr>
-<tr>
-<td>10</td>
+<td></td>
 <td>Improper</td>
 <td>No bonus</td>
 </tr>
 <tr>
-<td>11</td>
-<td>Too much information</td>
-<td>Knows everything about the wielder and over shares. +1-+2 depending on revelation.</td>
+<td></td>
+<td>Narcissistic</td>
+<td>Wielder must praise the sword with a novel compliment before entering combat or -1 att.</td>
 </tr>
 <tr>
-<td>12</td>
-<td>Lazy</td>
-<td>No bonus</td>
+<td></td>
+<td>Sarcastic</td>
+<td>Intelligent enemies may become enraged (20% chance, -2 attack, +1 damage)</td>
 </tr>
 <tr>
-<td>13</td>
-<td>Aloof</td>
-<td>No bonus for creatures of a lower level than the wielder.  +1 for the same level and +2 for 1 level above, +3 above that.</td>
-</tr>
-<tr>
-<td>14</td>
-<td>Insult Comic</td>
-<td>one time +1-3 damage for a good burn on a target (Judge’s discretion)</td>
-</tr>
-<tr>
-<td>15</td>
-<td>Schlemiel/Schlemazel</td>
-<td>Fumble range +1, crit range +1</td>
-</tr>
-<tr>
-<td>16</td>
+<td></td>
 <td>Backseat driver</td>
 <td>Offers advice after every swing and slash. Crits on table IV and takes all the credit.</td>
 </tr>
 <tr>
-<td>17</td>
-<td>OCD</td>
-<td>+2 sword if protocols are followed and -1 if not or there are any germs or dirt.</td>
+<td></td>
+<td>Stingy</td>
+<td>+1 attack, -1 damage</td>
 </tr>
 <tr>
-<td>18</td>
+<td></td>
+<td>Silly</td>
+<td>+1d damage</td>
+</tr>
+<tr>
+<td></td>
+<td>Schlemiel/Schlemazel</td>
+<td>+1, Fumble range +1, crit range +1, -2 Reflex saves</td>
+</tr>
+<tr>
+<td></td>
 <td>Kvetches</td>
 <td>Complains about everyone else’s actions. Fort save against crits. DC is natural die roll that scored the crit.</td>
 </tr>
 <tr>
-<td>19</td>
-<td>Emo</td>
-<td>+2 and Fumble range +1</td>
+<td></td>
+<td>Insult Comic</td>
+<td>one time +1 to +3 for a good burn on a target (Judge’s discretion)</td>
 </tr>
 <tr>
-<td>20</td>
+<td></td>
+<td>Grumpy</td>
+<td>Hates a creature type of Judge&rsquo;s choice, +1d damage and +1d crit die against creature</td>
+</tr>
+<tr>
+<td></td>
+<td>Aloof</td>
+<td>No bonus for creatures of a lower level than the wielder.  +1 for the same level and +2 for 1 level above, +3 above that.</td>
+</tr>
+<tr>
+<td></td>
+<td>Too much information</td>
+<td>Knows everything about the wielder and over shares. +1 or +2 depending on revelation.</td>
+</tr>
+<tr>
+<td></td>
+<td>Helpful</td>
+<td>+1, Cast <em>Locate Object (p.178)</em> 1/day.</td>
+</tr>
+<tr>
+<td></td>
+<td>OCD</td>
+<td>+2 if protocols are followed and -1 if not or there are any germs or dirt.</td>
+</tr>
+<tr>
+<td></td>
+<td>Eager and Curious</td>
+<td>+1, Blade glows within 10’ of secrets.</td>
+</tr>
+<tr>
+<td></td>
+<td>Emo</td>
+<td>+2, Fumble range +1</td>
+</tr>
+<tr>
+<td></td>
+<td>Angry</td>
+<td>+2</td>
+</tr>
+<tr>
+<td></td>
 <td>Death metal</td>
 <td>Damage +1d, crit range +1</td>
 </tr>
+<tr>
+<td></td>
+<td></td>
+<td>+1, +2 Luck</td>
+</tr>
+<tr>
+<td></td>
+<td>Secretive</td>
+<td>+1, User may become invisible 1/day for 1 turn or any type of attack.</td>
+</tr>
+<tr>
+<td></td>
+<td>Shocking</td>
+<td>+1, DC 10 Fort save or lose a round, affects weilder on a fumble.</td>
+</tr>
+<tr>
+<td></td>
+<td>Super Mom</td>
+<td>+3 if the wielder has earnestly helped or shown kindness, does not let the wielder lie, cheat, or steal.</td>
+</tr>
+<tr>
+<td></td>
+<td>Cool</td>
+<td>+2, +2 Personality</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td>+1, +2 to all saving throws</td>
+</tr>
+<tr>
+<td></td>
+<td>Ecstatic</td>
+<td>+3</td>
+</tr>
+<tr>
+<td></td>
+<td>Natural</td>
+<td>+2, +1 crit range, +1d crit die, -1d fumble die, +1 Ref saves, +3 Fort saves</td>
+</tr>
 </tbody>
 </table>
-<p>If the sword is ignored, unused for a long time, or unused because of a die roll, it becomes Petulant until the next personality change. 
+<p>If the sword is ignored, unused for a long time, or unused because of a die roll, it becomes Petulant at the next personality change. 
 Petulant: whines about everything. No bonuses.</p>
 </section>
 <section class="">
