--- a/croak_01.html
+++ b/croak_01.html
@@ -637,14 +637,12 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 <p>Dark Elves can heal 1 luck per day and use it to cast spells, but cannot spellburn except at great cost. Burning Stats other than luck causes permanent damage.</p>
 <p>Dark Elves share common elf traits such as infravision, a lucky spell, heigtened senses, and immunity to magical sleep and paralysis.</p>
 <p><strong>Hit points:</strong> A Dark Elf gains 1d7 hit points at each level.</p>
-<p><strong>Spells Known:</strong> as Elf -2 and no automatic Patron Bond/Invoke Patron.</p>
+<p><strong>Spells</strong>: No automatic Patron Bond/Invoke Patron.</p>
 <p><strong>Caster Level:</strong> Dark elves cast at 1 less than their caster level.</p>
-<p><strong>Luck Die:</strong> 1:1 at first level and then as Thief -d1 thereafter.</p>
 <p><strong>Spellburn:</strong> Spellburn damage is permanent except for luck.</p>
 <p><strong>Corruption:</strong> -d1 (d8) when rolling for corruption or patron taint.
 Luck burned to avoid corruption is permanent.</p>
-<p><strong>Vulnerability:</strong> Prolonged contact with iron causes 4hp damage per day
-and -1d on all rolls. Damage from iron weapons causes an additional 1
+<p><strong>Vulnerability:</strong> Contact with iron for more than just a moment causes 4hp damage per day and -1d on Will saves. Damage from iron weapons causes an additional 1
 point of damage.</p>
 <h3 id="dark-elf-skills">Dark Elf Skills</h3>
 <table>
