--- a/output.html
+++ b/output.html
@@ -57,12 +57,12 @@ Rangers are warriors of the forest. What they lack in hit points, they make up f
 </pre>
 <p>I then use a script on my computer to transform this into a webpage and PDF.
 The images are in a separate folder and, are linked in the text as well.</p>
-<p>You can see all of the text by looking at the croak.md file at this link: <a href="https://github.com/arielchuri/autozinefier/">https://github.com/arielchuri/autozinefier/</a>.
+<p>You can see all of the text by looking at the croak_01.md file at this link: <a href="https://github.com/arielchuri/autozinefier/">https://github.com/arielchuri/autozinefier/</a>.
 The html and pdf files are in there as well.
-Here is the html as a webpage: <a href="https://arielchuri.github.io/autozinefier/croak.html">https://arielchuri.github.io/autozinefier/croak.html</a>.</p>
+Here is the html as a webpage: <a href="https://arielchuri.github.io/autozinefier/croak_01.html">https://arielchuri.github.io/autozinefier/croak_01.html</a>.</p>
 <p>To do this at home, use the button that says, <em>code</em> to download a zip file of everything.
 You will need to install two command line programs. Python-markdown (<a href="https://python-markdown.github.io/">https://python-markdown.github.io/</a>) and Weasyprint (<a href="https://weasyprint.org/">https://weasyprint.org/</a>).</p>
-<p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work here is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
+<p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak_01</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work here is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it. Like use all or some of it in your own work or print it out and sell it at your table. </p>
 </section>
 <section class="">
 <!-- ![](images/coversuper.svg) -->
